netlify sitemap pluggin added

--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>Contact</title>
+    <title>Contact Ghana car rental</title>
   </head>
   <body>
     <header>
