--- a/booking.html
+++ b/booking.html
@@ -45,7 +45,7 @@
       integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
       crossorigin="anonymous"
     ></script>
-    <title>Booking</title>
+    <title>Booking Ghana car rental</title>
   </head>
   <body>
     <header>
