--- a/gallery.html
+++ b/gallery.html
@@ -33,7 +33,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
-    <title>Gallery</title>
+    <title>Gallery Ghana car rental</title>
   </head>
   <body>
     <header>
