--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
 
-    <title>Home</title>
+    <title>Ghana car rental</title>
   </head>
   <body>
     <header>
