Key words included for SEO

--- a/index.html
+++ b/index.html
@@ -73,13 +73,15 @@
     </main>
     <section class="clearfix" id="about">
       <section>
-        <h1 class="banner">TRUSTED & RELIABLE CAR RENTAL FOR ALL OCCASIONS</h1>
+        <h1 class="banner">
+          TRUSTED & RELIABLE CAR RENTALS IN GHANA FOR ALL OCCASIONS
+        </h1>
       </section>
       <section class="aboutInfo">
         <div class="info1">
           <div>
             <h6>HAVE CONCERNS?</h6>
-            <p>Did you just arrive in Ghana?</p>
+            <p>Did you just arrive in Ghana and need to rent a car in Accra?</p>
             <p>Do you need comfortable accessible rides?</p>
             <p>Looking for affordable car rental?</p>
             <p>Are well maintained cars a priority for you?</p>
