--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/rental.css" />
+    <link rel="canonical" href="https://www.akdrentals.org/" />
     <link rel="icon" type="image/png" href="cover.png" />
     <link
       rel="stylesheet"
