favicons added to other pages and addtional words added to index page

--- a/index.html
+++ b/index.html
@@ -301,10 +301,13 @@
         </div>
 
         <div class="visits">
-          <h1>Book now for your next road trip. Drive in comfort and style</h1>
+          <h1>
+            Book now for your next road trip in Ghana. Drive in comfort and
+            style
+          </h1>
 
           <ul>
-            <li>Visit tourist sites</li>
+            <li>Visit tourist sites in Ghana</li>
             <li>Go say Hi to family and friends</li>
             <li>Explore nature</li>
             <li>Chauffeur services</li>
