Added more info in the title, added more keywords to meta title, added schema.org data structure,

--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
     <header>
       <nav>
         <h5 class="box-1">
-          <img src="images/logo.png" />
+          <img src="images/logo.png" alt="Company Logo" />
         </h5>
 
         <ul class="box-2" id="ulChanges">
@@ -125,15 +125,17 @@
     <footer class="clearfix">
       <section class="socials">
         <section class="socialMedia">
-          <h4><img src="images/logo.png" /></h4>
+          <h4><img src="images/logo.png" company logo /></h4>
           <ul class="icons">
-            <li><img src="images/facebook.png" /> :facebook</li>
-            <li><img src="images/instagram.png" /> :Instagram</li>
-            <li><img src="images/twitter.png" /> :Twitter</li>
+            <li><img src="images/facebook.png" alt="facebook " /> :facebook</li>
+            <li>
+              <img src="images/instagram.png" alt="instagram" /> :Instagram
+            </li>
+            <li><img src="images/twitter.png" alt="twitter" /> :Twitter</li>
           </ul>
         </section>
         <section class="locations footerLocations">
-          <h4>Locations</h4>
+          <h3>Locations</h3>
           <ul class="address">
             <li>Address:Kwashieman, Accra, Ghana</li>
             <li>Email :customerservice@akdrentals.org</li>
