--- a/gallery.html
+++ b/gallery.html
@@ -40,7 +40,7 @@
     <header>
       <nav>
         <h5 class="box-1">
-          <img src="images/logo.png" />
+          <img src="images/logo.png" alt="company logo" />
         </h5>
 
         <ul class="box-2">
@@ -76,7 +76,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/car11.png" class="carSize" alt="" />
+              <img
+                src="images/car11.png"
+                class="carSize"
+                alt="metalic brown car"
+              />
               <button class="card-btn">
                 <a href="detail.html"></a>
               </button>
@@ -94,7 +98,7 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/car22.png" class="carSize" alt="" />
+              <img src="images/car22.png" class="carSize" alt="black car" />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -112,7 +116,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/car33.png" class="carSize" alt="" />
+              <img
+                src="images/car33.png"
+                class="carSize"
+                alt="metalic black car"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -130,7 +138,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/carCover222.jpg" class="carSize" alt="" />
+              <img
+                src="images/carCover222.jpg"
+                class="carSize"
+                alt="second metalic black car"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -148,7 +160,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/car44.jpg" class="carSize" alt="" />
+              <img
+                src="images/car44.jpg"
+                class="carSize"
+                alt="back of metalic black car"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -166,7 +182,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/car55.jpg" class="carSize" alt="" />
+              <img
+                src="images/car55.jpg"
+                class="carSize"
+                alt="side of metalic black car"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -184,7 +204,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/carInteriorOne.png" class="carSize" alt="" />
+              <img
+                src="images/carInteriorOne.png"
+                class="carSize"
+                alt="white car interior"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -202,7 +226,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/carInteriorTwo.png" class="carSize" alt="" />
+              <img
+                src="images/carInteriorTwo.png"
+                class="carSize"
+                alt="black interior"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -220,7 +248,11 @@
           <div>
             <div>
               <span class="discount-tag">50% off</span>
-              <img src="images/carInteriorThre.png" class="carSize" alt="" />
+              <img
+                src="images/carInteriorThre.png"
+                class="carSize"
+                alt="wine car interior"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -238,7 +270,7 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/carBooth.png" class="carSize" alt="" />
+              <img src="images/carBooth.png" class="carSize" alt="car booth" />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -256,7 +288,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/carInteriorFive.jpg" class="carSize" alt="" />
+              <img
+                src="images/carInteriorFive.jpg"
+                class="carSize"
+                alt="black front car interior"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -274,7 +310,11 @@
           <div>
             <div>
               <span class="discount-tag"></span>
-              <img src="images/carInteriorFou.jpg" class="carSize" alt="" />
+              <img
+                src="images/carInteriorFou.jpg"
+                class="carSize"
+                alt="back car interior"
+              />
               <button class="card-btn">
                 <a href="template.html"></a>
               </button>
@@ -712,15 +752,17 @@
     <footer class="clearfix">
       <section class="socials">
         <section class="socialMedia">
-          <h4><img src="images/logo.png" /></h4>
+          <h4><img src="images/logo.png" alt="company logo" /></h4>
           <ul class="icons">
-            <li><img src="images/facebook.png" /> :facebook</li>
-            <li><img src="images/instagram.png" /> :Instagram</li>
-            <li><img src="images/twitter.png" /> :Twitter</li>
+            <li><img src="images/facebook.png" alt="facebook " /> :facebook</li>
+            <li>
+              <img src="images/instagram.png" alt="instagram" /> :Instagram
+            </li>
+            <li><img src="images/twitter.png" alt="twitter" /> :Twitter</li>
           </ul>
         </section>
         <section class="locations">
-          <h4>Locations</h4>
+          <h3>Locations</h3>
           <ul class="address">
             <li>Address:Kwashieman, Accra, Ghana</li>
             <li>Email :customerservice@akdrentals.org</li>
