--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta
+      name="description"
+      content="Are you looking to rent a car in Ghana upon arrival to the country? Akd car rentals has got you covered. We specialize in Renting out Toyota Land Cruiser Prados to help you cruise easily through the rough terrains in Ghana. We make it easy to rent a car in Accra. Get in touch, we are just a call away."
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/rental.css" />
     <link rel="canonical" href="https://www.akdrentals.org/" />
@@ -35,13 +39,128 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
 
-    <title>Ghana car rental</title>
+    <title>
+      Car rental or car hire in Accra, Ghana. Rent Toyota Land Cruisers in Ghana
+    </title>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@graph": [
+          {
+            "@type": ["LocalBusiness", "Organization"],
+            "@id": "https://www.akdrentals.org/#organization",
+            "name": "AKD Car Rentals",
+            "url": "https://www.akdrentals.org/",
+            "logo": "https://www.akdrentals.org/images/logo.png",
+            "description": "Trusted & Reliable Car Rentals in Ghana, specializing in Toyota Land Cruiser Prados for hire in Accra.",
+            "telephone": "+233256087092",
+            "email": "mailto:customerservice@akdrentals.org",
+            "address": {
+              "@type": "PostalAddress",
+              "streetAddress": "Kwashieman",
+              "addressLocality": "Accra",
+              "addressRegion": "Greater Accra",
+              "addressCountry": "GH"
+            },
+            "priceRange": "1000 GHS - (Variable)",
+            "areaServed": {
+              "@type": "State",
+              "name": "Ghana"
+            },
+            "openingHoursSpecification": [
+              {
+                "@type": "OpeningHoursSpecification",
+                "dayOfWeek": [
+                  "Monday",
+                  "Tuesday",
+                  "Wednesday",
+                  "Thursday",
+                  "Friday",
+                  "Saturday",
+                  "Sunday"
+                ],
+                "opens": "08:00",
+                "closes": "19:00"
+              }
+            ],
+            "contactPoint": {
+              "@type": "ContactPoint",
+              "telephone": "+233256087092",
+              "contactType": "customer service"
+            },
+            "potentialAction": {
+              "@type": "ReserveAction",
+              "target": "https://www.akdrentals.org/booking.html"
+            }
+          }
+        ]
+      }
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "BreadcrumbList",
+        "itemListElement": [
+          {
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Home",
+            "item": "https://www.akdrentals.org/"
+          },
+          {
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Gallery",
+            "item": "https://www.akdrentals.org/gallery.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 3,
+            "name": "Booking",
+            "item": "https://www.akdrentals.org/booking.html"
+          },
+          {
+            "@type": "ListItem",
+            "position": 4,
+            "name": "Contact",
+            "item": "https://www.akdrentals.org/contact.html"
+          }
+        ]
+      }
+    </script>
+
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Service",
+        "serviceType": "Car Rental",
+        "provider": {
+          "@type": "Organization",
+          "name": "AKD Car Rentals"
+        },
+        "areaServed": {
+          "@type": "State",
+          "name": "Ghana"
+        },
+        "description": "Car rental service in Accra, Ghana. We specialize in renting out Toyota Land Cruiser Prados to help you cruise easily through the rough terrains in Ghana.",
+        "url": "https://www.akdrentals.org/",
+        "offers": {
+          "@type": "Offer",
+          "priceCurrency": "GHS",
+          "price": "1000",
+          "name": "Daily Car Rental",
+          "description": "Affordable and transparent prices for short term and long term car rentals."
+        }
+      }
+    </script>
   </head>
   <body>
     <header>
       <nav>
         <h5 class="box-1">
-          <img src="images/logo.png" />
+          <img src="images/logo.png" alt="company logo" />
         </h5>
 
         <ul class="box-2">
@@ -59,10 +178,10 @@
           <!-- Slides -->
           <!-- <div class="swiper-slide"><img src="images/carCover111.jpg" /></div> -->
           <div class="swiper-slide" id="carCover">
-            <img src="images/carCover222.png" />
+            <img src="images/carCover222.png" alt="cover image1" />
           </div>
           <div class="swiper-slide" id="carCover2">
-            <img src="images/carCover333.png" />
+            <img src="images/carCover333.png" alt="cover image2" />
           </div>
         </div>
         <!-- If we need pagination -->
@@ -82,7 +201,7 @@
       <section class="aboutInfo">
         <div class="info1">
           <div>
-            <h6>HAVE CONCERNS?</h6>
+            <p class="concerns">HAVE CONCERNS?</p>
             <p>Did you just arrive in Ghana and need to rent a car in Accra?</p>
             <p>Do you need comfortable accessible rides?</p>
             <p>Looking for affordable car rental?</p>
@@ -113,7 +232,9 @@
             <p>
               We offer affordable and transparent prices for both short term and
               long term travels. Pricing starts for as low as low as
-              <span>1000 Gh cedis,</span> and could vary based on distance
+              <span>1000 Gh cedis,</span> and could vary based on distance. Our
+              Toyota Land Cruisers are just what you need to navigate the
+              roughest terrains as well as ride in comfort on the smooth ones.
             </p>
           </div>
           <div class="booking">
@@ -123,7 +244,7 @@
               <li>
                 <button>
                   <a href="tel:15197299413"
-                    ><img src="images/phone.png" />+233256087092</a
+                    ><img src="images/phone.png" alt="phone" />+233256087092</a
                   >
                 </button>
               </li>
@@ -146,14 +267,22 @@
     </section>
     <section class="product">
       <h2 class="product-category">Vehicle fleet</h2>
-      <button class="pre-btn"><img src="images/arrow11.png" alt="" /></button>
-      <button class="nxt-btn"><img src="images/arrow11.png" alt="" /></button>
+      <button class="pre-btn">
+        <img src="images/arrow11.png" alt="left arrow sign" />
+      </button>
+      <button class="nxt-btn">
+        <img src="images/arrow11.png" alt="right arrow sign" />
+      </button>
       <div class="product-container">
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag"></span>
-            <img src="images/car11.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
+            <img
+              src="images/car11.png"
+              class="product-thumb"
+              alt="metal brown car"
+            />
+            <button class="card-btn">rent a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -166,8 +295,8 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag"></span>
-            <img src="images/car22.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
+            <img src="images/car22.png" class="product-thumb" alt="black car" />
+            <button class="card-btn">rent a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -180,8 +309,12 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag"></span>
-            <img src="images/car33.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
+            <img
+              src="images/car33.png"
+              class="product-thumb"
+              alt="metal black car"
+            />
+            <button class="card-btn">hire or rent a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -194,8 +327,12 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag"></span>
-            <img src="images/carInteriorOne.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
+            <img
+              src="images/carInteriorOne.png"
+              class="product-thumb"
+              alt="White car interior"
+            />
+            <button class="card-btn">hire or rent a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -208,8 +345,12 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag"></span>
-            <img src="images/carInteriorTwo.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
+            <img
+              src="images/carInteriorTwo.png"
+              class="product-thumb"
+              alt="black car interior"
+            />
+            <button class="card-btn">hire or rent a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -225,9 +366,9 @@
             <img
               src="images/carInteriorThre.png"
               class="product-thumb"
-              alt=""
+              alt="wine car interior car interior"
             />
-            <button class="card-btn">add to wishlist</button>
+            <button class="card-btn">hire or rent a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -240,8 +381,12 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag"></span>
-            <img src="images/carBooth.png" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
+            <img
+              src="images/carBooth.png"
+              class="product-thumb"
+              alt="car booth"
+            />
+            <button class="card-btn">hire a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -254,8 +399,12 @@
         <div class="product-card">
           <div class="product-image">
             <span class="discount-tag"></span>
-            <img src="images/carInteriorFou.jpg" class="product-thumb" alt="" />
-            <button class="card-btn">add to wishlist</button>
+            <img
+              src="images/carInteriorFou.jpg"
+              class="product-thumb"
+              alt="prado black interior"
+            />
+            <button class="card-btn">hire or rent a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -271,9 +420,9 @@
             <img
               src="images/carInteriorFive.jpg"
               class="product-thumb"
-              alt=""
+              alt="shiny black interior"
             />
-            <button class="card-btn">add to wishlist</button>
+            <button class="card-btn">hire or rent a car in Accra Ghana</button>
           </div>
           <div class="product-info">
             <h2 class="product-brand"></h2>
@@ -301,10 +450,10 @@
         </div>
 
         <div class="visits">
-          <h1>
+          <h2>
             Book now for your next road trip in Ghana. Drive in comfort and
             style
-          </h1>
+          </h2>
 
           <ul>
             <li>Visit tourist sites in Ghana</li>
@@ -366,15 +515,17 @@
     <footer class="clearfix">
       <section class="socials">
         <section class="socialMedia">
-          <h4><img src="images/logo.png" /></h4>
+          <h4><img src="images/logo.png" alt="Company Logo" /></h4>
           <ul class="icons">
-            <li><img src="images/facebook.png" /> :facebook</li>
-            <li><img src="images/instagram.png" /> :Instagram</li>
-            <li><img src="images/twitter.png" /> :Twitter</li>
+            <li><img src="images/facebook.png" alt="facebook " /> :facebook</li>
+            <li>
+              <img src="images/instagram.png" alt="instagram" /> :Instagram
+            </li>
+            <li><img src="images/twitter.png" alt="twitter" /> :Twitter</li>
           </ul>
         </section>
         <section class="locations">
-          <h4>Locations</h4>
+          <h3>Locations</h3>
           <ul class="address">
             <li>Address:Kwashieman, Accra, Ghana</li>
             <li>Email :customerservice@akdrentals.org</li>
