postal address removed and business image added

--- a/index.html
+++ b/index.html
@@ -53,11 +53,11 @@
             "name": "AKD Car Rentals",
             "url": "https://www.akdrentals.org/",
             "logo": "https://www.akdrentals.org/images/logo.png",
+            "image": "https://www.akdrentals.org/images/logo.png",
             "description": "Trusted & Reliable Car Rentals in Ghana, specializing in Toyota Land Cruiser Prados for hire in Accra.",
             "telephone": "+233256087092",
             "email": "mailto:customerservice@akdrentals.org",
             "address": {
-              "@type": "PostalAddress",
               "streetAddress": "Kwashieman",
               "addressLocality": "Accra",
               "addressRegion": "Greater Accra",
