meta title and description shortened

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta
       name="description"
-      content="Are you looking to rent a car in Ghana upon arrival to the country? Akd car rentals has got you covered. We specialize in Renting out Toyota Land Cruiser Prados to help you cruise easily through the rough terrains in Ghana. We make it easy to rent a car in Accra. Get in touch, we are just a call away."
+      content="Are you looking to rent a car in Ghana upon arrival to the country? Akd car rentals has got you covered. Toyota Land Cruiser Prados for all terrains"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="css/rental.css" />
@@ -39,9 +39,7 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
     />
 
-    <title>
-      Car rental or car hire in Accra, Ghana. Rent Toyota Land Cruisers in Ghana
-    </title>
+    <title>Car rental in Accra. Rent Toyota Land Cruisers in Ghana</title>
 
     <script type="application/ld+json">
       {
